@@ -1,5 +1,6 @@
 Changes for 1.8.6rc1
 
+ - [ZBX-3911] fixed wrong trigger expression parsing when key paramerets contained "(" (KB)
  - [ZBX-3856] fixed application unlink and clear when it is linked from template (Eduard)
  - [ZBX-3840] fixed possible path disclosure (Vedmak)
  - [ZBXNEXT-849] added example MySQL UserParameter to monitor database and table size (Richlv)
